@@ -1,5 +1,6 @@
 v 7.4.1
   - Fix LDAP authentication for Git HTTP access
+  - Fix LDAP config lookup for provider 'ldap'
 
 v 7.4.0
   - Refactored membership logic
